[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/styles/worker_button/WorkerButtonNormalStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/sprites/workers/leaf_loving_bee.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/worker_button.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/symbols/honeycomb.png" type="Texture" id=5]
[ext_resource path="res://assets/styles/worker_button/WorkerButtonHoveredStyle.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/styles/worker_button/WorkerButtonDisabledStyle.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/styles/worker_button/WorkerButtonPressedStyle.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="WorkerButton" type="Button"]
margin_right = 556.0
margin_bottom = 100.0
rect_min_size = Vector2( 480, 100 )
mouse_filter = 1
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 2 )
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 536.0
margin_bottom = 80.0
custom_constants/separation = 10

[node name="RankContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
visible = false
margin_right = 60.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 0 )

[node name="TopPadding" type="Control" parent="MarginContainer/HBoxContainer/RankContainer"]
margin_right = 60.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="RankNumberLabel" type="Label" parent="MarginContainer/HBoxContainer/RankContainer"]
margin_top = 14.0
margin_right = 60.0
margin_bottom = 45.0
rect_min_size = Vector2( 40, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 2

[node name="RankTextLabel" type="Label" parent="MarginContainer/HBoxContainer/RankContainer"]
margin_top = 49.0
margin_right = 60.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "RANK"
align = 1

[node name="WorkerTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/WorkerTextureRect"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -24.0
color = Color( 0, 0, 0, 0.498039 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/WorkerTextureRect/ColorRect"]
margin_right = 105.0
margin_bottom = 24.0

[node name="WorkerPriceLabel" type="Label" parent="MarginContainer/HBoxContainer/WorkerTextureRect/ColorRect/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "7"
align = 2
valign = 2

[node name="HoneycombTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/WorkerTextureRect/ColorRect/HBoxContainer"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
texture = ExtResource( 5 )
expand = true

[node name="TextContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 90.0
margin_right = 414.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="WorkerNameLabel" type="Label" parent="MarginContainer/HBoxContainer/TextContainer"]
margin_right = 324.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 8 )
text = "Average Worker"

[node name="InfoLabel" type="Label" parent="MarginContainer/HBoxContainer/TextContainer"]
visible = false
margin_top = 34.0
margin_right = 348.0
margin_bottom = 77.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "copies the stats and effects of the
bee to the left of it when placed"

[node name="InfoRichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/TextContainer"]
margin_top = 34.0
margin_right = 324.0
margin_bottom = 80.0
rect_clip_content = false
mouse_filter = 1
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
text = "copies the stats and effects of the bee to the left of it when placed"

[node name="RankAndTotalPriceContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 424.0
margin_right = 536.0
margin_bottom = 80.0

[node name="RankLabel" type="Label" parent="MarginContainer/HBoxContainer/RankAndTotalPriceContainer"]
visible = false
margin_right = 80.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "RANK 0"
align = 1
valign = 1

[node name="TotalPriceLabel" type="Label" parent="MarginContainer/HBoxContainer/RankAndTotalPriceContainer"]
visible = false
margin_top = 34.0
margin_right = 105.0
margin_bottom = 79.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
valign = 1

[node name="TotalPriceContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RankAndTotalPriceContainer"]
margin_right = 112.0
margin_bottom = 80.0
size_flags_vertical = 3

[node name="WorkerPriceLabel" type="Label" parent="MarginContainer/HBoxContainer/RankAndTotalPriceContainer/TotalPriceContainer"]
margin_right = 60.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 24 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "17"
align = 2
valign = 1

[node name="HoneycombTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/RankAndTotalPriceContainer/TotalPriceContainer"]
margin_left = 64.0
margin_right = 112.0
margin_bottom = 80.0
texture = ExtResource( 5 )
stretch_mode = 4
